syntax = "proto3";

package go.micro.srv.GetSmscd;

service Example {
	rpc GetSmscd(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
    string mobile = 1;
    string imagestr = 2;
    string uuid = 3;
}

message Response {
	string Error = 1;
	string Errmsg = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
